Modified filter name and adpated to be used by two services in coordinator portal